platform/k8s/base/services/cart/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  selector:
    app: cart
  ports:
    - name: http
      port: 80
      targetPort: 8085
  type: ClusterIP
