platform/k8s/base/services/cart/postgres-cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cart
spec:
  selector:
    app: postgres-cart
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
