platform/k8s/base/services/cart/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cart-service-netpol
  namespace: atlas
spec:
  podSelector:
    matchLabels:
      app: cart
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Permite tráfico desde cualquier pod del namespace atlas hacia cart-service
    # Así no rompemos gateway/order/prometheus durante esta fase.
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: atlas
      ports:
        - protocol: TCP
          port: 8085

  egress:
    # Permite salir hacia PostgreSQL de cart
    - to:
        - podSelector:
            matchLabels:
              app: postgres-cart
      ports:
        - protocol: TCP
          port: 5432

    # Permite DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
