platform/k8s/base/services/cart/postgres-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-cart-netpol
  namespace: atlas
spec:
  podSelector:
    matchLabels:
      app: postgres-cart
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: cart
              
        - podSelector:
            matchLabels:
              app: postgres-backup      
      ports:
        - protocol: TCP
          port: 5432
